--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server",
-        "start:dev": "nodemon server.js"
+        "start:dev": "nodemon server.js",
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
